--- a/xss/production/test/3js-ms.html
+++ b/xss/production/test/3js-ms.html
@@ -21,6 +21,9 @@
 <script type="text/javascript" src="../js/ms-ui.js"></script>
 <script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript" src="../js/ms-state.js"></script>
+<script type="text/javascript" src="../js/ms-event.js"></script>
+<script type="text/javascript" src="../js/keys.js"></script>
+<script type="text/javascript" src="../js/colors.js"></script>
 <script type="text/javascript">		
 	var renderer = new THREE.CanvasRenderer();	
 var ui;
@@ -30,6 +33,7 @@ var g_delta = 0.0;
 var drawingCanvas = renderer.domElement;
 var anim_1;var fade_1;
 var application = {};
+application.events = new ms.event.EventHolder();
 		var g_sequence_manager = new ms.state.Manager();
         function default_interpolate(a, b, t)
         {
@@ -48,7 +52,9 @@ else
 g_delta  = now - g_elapsed;  
 g_elapsed = now; 
 		g_sequence_manager.update(g_delta);
+application.events.dispatch("animate", []);	
 		set_active_camera(camera_1);
+application.events.dispatch("switch_cameras", []);
 }
             move_anim = Class.create(ms.state.Sequence,
         {
@@ -150,21 +156,15 @@ new THREE.Cylinder(
 200,100,100,500);
 	    var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder, cylinder_material);
 	    scene.addObject(cylinder_1);
+		cylinder_1.events = new ms.event.EventHolder();
                 set_rotation_x(cylinder_1.rotation, 10);
                 set_rotation_y(cylinder_1.rotation, 10);
-	document.addEventListener( 'click', click_cylinder_1, false );
-	function click_cylinder_1 (event)
-	{
-	var x = event.clientX;
-	var y = event.clientY;
-		event.preventDefault();
-		var intersects = get_intersects( event.clientX, event.clientY, cylinder_1);
-		if ( intersects.length > 0 ) 
-		{   
+	cylinder_1.events.addListener("click", function()
+	{    
 		anim_1.start();
 fade_1.start();
-		}
-	};
+	}
+	);
 anim_1 =
 new move_anim(
 g_sequence_manager);
@@ -173,8 +173,8 @@ fade_1 =
 new fade_anim(
 g_sequence_manager);
             fade_1.parent_sequence = null;
-application.init = function()
-{    
+	application.init = function() 
+	{
 		anim_1.target = cylinder_1;
 fade_1.target = cylinder_1;
 	};
@@ -184,6 +184,31 @@ if(ui)
 		g_ui.fill_background = false;
 	});
 }
+var event_manager = new ms.event.ThreeEventManager();
+document.onmousemove = function(ev)
+{
+	event_manager.mousemove(ev.clientX, ev.clientY);                  
+};
+document.onmousedown = function(ev)
+{
+	event_manager.mousedown(ev.clientX, ev.clientY);                  
+};
+document.onmouseup = function(ev)
+{
+	event_manager.mouseup(ev.clientX, ev.clientY);		
+};
+document.onkeydown = function(ev)
+{
+	event_manager.keydown(ev.keyCode);                  
+};
+document.onkeyup = function(ev)
+{
+	event_manager.keyup(ev.keyCode);                  
+};
+document.onkeypress = function(ev)
+{
+	event_manager.keypress(ev.keyCode);                  
+};
 if (application.init)
 {
 	application.init();
