--- a/xss/production/test/3js-ui.html
+++ b/xss/production/test/3js-ui.html
@@ -20,6 +20,9 @@
 <script type="text/javascript" src="../js/ms-ui.js"></script>
 <script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript" src="../js/ms-state.js"></script>
+<script type="text/javascript" src="../js/ms-event.js"></script>
+<script type="text/javascript" src="../js/keys.js"></script>
+<script type="text/javascript" src="../js/colors.js"></script>
 <script type="text/javascript">		
 	var renderer = new THREE.CanvasRenderer();	
 var ui;
@@ -28,6 +31,7 @@ var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
 var application = {};
+application.events = new ms.event.EventHolder();
 		var streamer = new ms.streamer.Streamer();
 		if(drawingCanvas){
 			var client =
@@ -67,10 +71,9 @@ if (g_elapsed < 0)
 else
 g_delta  = now - g_elapsed;  
 g_elapsed = now; 
-		set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + (application.x_target_rotation - get_rotation_y(cube_1.rotation)) * 0.200000003);
-set_rotation_z(plane_1.rotation, get_rotation_y(cube_1.rotation));
-set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + (application.y_target_rotation - get_rotation_x(cube_1.rotation)) * 0.200000003);
+application.events.dispatch("animate", []);	
 		set_active_camera(camera_1);
+application.events.dispatch("switch_cameras", []);
 }
 var materials = 
 new Array(
@@ -115,12 +118,14 @@ new THREE.Cube(
 200,200,200,1,1,1,materials);
 	    var cube_1 = new THREE.Mesh(cube_1_cube, new THREE.MeshFaceMaterial());
 	    scene.addObject(cube_1);
+		cube_1.events = new ms.event.EventHolder();
                 cube_1.position.y = 150;
 	    var plane_1_plane = 
 new THREE.Plane(
 200,200);
 	    var plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
 	    scene.addObject(plane_1);
+		plane_1.events = new ms.event.EventHolder();
                 set_rotation_x(plane_1.rotation, -1.57000005);
                 application.x_target_rotation = 0;
                 application.x_target_rotation_on_mouse_down = 0;
@@ -134,42 +139,32 @@ new THREE.Plane(
                 application.window_half_y = window.innerHeight / 2;
                 application.is_mouse_down = false;
                 application.clicks = 1;
-	document.addEventListener( 'mousedown', mousedown_application, false );
-	function mousedown_application (event)
-	{
-	var x = event.clientX;
-	var y = event.clientY;
-		application.is_mouse_down = true;
-application.mouse_x_on_mouse_down = x - application.window_half_x;
+	application.events.addListener("mousedown", function(x,y)
+	{    
+		application.mouse_x_on_mouse_down = x - application.window_half_x;
 application.x_target_rotation_on_mouse_down = application.x_target_rotation;
 application.mouse_y_on_mouse_down = y - application.window_half_y;
 application.y_target_rotation_on_mouse_down = application.y_target_rotation;
-	};
-	document.addEventListener( 'mouseup', mouseup_application, false );
-	function mouseup_application (event)
-	{
-	var x = event.clientX;
-	var y = event.clientY;
-		application.is_mouse_down = false;
-	};
-	document.addEventListener( 'mousemove', mousemove_application, false );
-	function mousemove_application (event)
-	{
-	var x = event.clientX;
-	var y = event.clientY;
-		if (application.is_mouse_down)
-{
-application.mouse_x = x - application.window_half_x;
+	}
+	);
+	application.events.addListener("drag", function(x,y)
+	{    
+		application.mouse_x = x - application.window_half_x;
 application.x_target_rotation = application.x_target_rotation_on_mouse_down + (application.mouse_x - application.mouse_x_on_mouse_down) * 0.300000012;
 application.mouse_y = y - application.window_half_y;
 application.y_target_rotation = application.y_target_rotation_on_mouse_down + (application.mouse_y - application.mouse_y_on_mouse_down) * 0.300000012;
-}
-	};
-	document.addEventListener( 'keydown', keydown_application, false );
-	function keydown_application (event)
-	{   
-	var keycode = event.keyCode;
-			if (btn1.isVisible())
+	}
+	);
+	application.events.addListener("animate", function()
+	{    
+		set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + (application.x_target_rotation - get_rotation_y(cube_1.rotation)) * 0.200000003);
+set_rotation_z(plane_1.rotation, get_rotation_y(cube_1.rotation));
+set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + (application.y_target_rotation - get_rotation_x(cube_1.rotation)) * 0.200000003);
+	}
+	);
+	application.events.addListener("keydown", function(keycode)
+	{    
+		if (btn1.isVisible())
 {
 if (keycode == LEFT_ARROW)
 {
@@ -189,6 +184,7 @@ btn1.set_y(btn1.y + 2);
 }
 }
 	}
+	);
 if(ui)
 {
 	ui.load_resources(function(){		
@@ -211,12 +207,13 @@ if(ui)
 		    btn1 = new ms.ui.Button( 
 	    "images/smile_sad_48.png","images/smile_grin_48.png",g_ui_root.manager, g_ui_root);
                 btn1.set_rotation(15);
-	btn1.click = function()
+	btn1.events.addListener("click", function()
 	{    
 		lbl0.text("Got " + application.clicks + " smileys");
 btn1.set_rotation(btn1.get_rotation() + 10);
 application.clicks = application.clicks + 1;
-	};
+	}
+	);
  btn1.center(50, 50); 
 		    lbl1 = new ms.ui.Label( 
 	    "Verdana",g_ui_root.manager, g_ui_root);
@@ -229,6 +226,31 @@ application.clicks = application.clicks + 1;
 		g_ui.fill_background = false;
 	});
 }
+var event_manager = new ms.event.ThreeEventManager();
+document.onmousemove = function(ev)
+{
+	event_manager.mousemove(ev.clientX, ev.clientY);                  
+};
+document.onmousedown = function(ev)
+{
+	event_manager.mousedown(ev.clientX, ev.clientY);                  
+};
+document.onmouseup = function(ev)
+{
+	event_manager.mouseup(ev.clientX, ev.clientY);		
+};
+document.onkeydown = function(ev)
+{
+	event_manager.keydown(ev.keyCode);                  
+};
+document.onkeyup = function(ev)
+{
+	event_manager.keyup(ev.keyCode);                  
+};
+document.onkeypress = function(ev)
+{
+	event_manager.keypress(ev.keyCode);                  
+};
 if (application.init)
 {
 	application.init();
