--- a/xss/production/test/3js_cube_img.html
+++ b/xss/production/test/3js_cube_img.html
@@ -20,6 +20,9 @@
 <script type="text/javascript" src="../js/ms-ui.js"></script>
 <script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript" src="../js/ms-state.js"></script>
+<script type="text/javascript" src="../js/ms-event.js"></script>
+<script type="text/javascript" src="../js/keys.js"></script>
+<script type="text/javascript" src="../js/colors.js"></script>
 <script type="text/javascript">		
 	if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 	var renderer = new THREE.WebGLRenderer( { antialias: false } );
@@ -29,6 +32,7 @@ var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
 var application = {};
+application.events = new ms.event.EventHolder();
 		var streamer = new ms.streamer.Streamer();
 	// --------RESOURCES---------
         var def_package_items = [];
@@ -87,10 +91,9 @@ if (g_elapsed < 0)
 else
 g_delta  = now - g_elapsed;  
 g_elapsed = now; 
-		set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + (application.x_target_rotation - get_rotation_y(cube_1.rotation)) * 0.200000003);
-set_rotation_z(plane_1.rotation, get_rotation_y(cube_1.rotation));
-set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + (application.y_target_rotation - get_rotation_x(cube_1.rotation)) * 0.200000003);
+application.events.dispatch("animate", []);	
 		set_active_camera(camera_1);
+application.events.dispatch("switch_cameras", []);
 }
 var materials = 
 new Array(
@@ -135,12 +138,14 @@ new THREE.Cube(
 200,200,200,1,1,1,materials);
 	    var cube_1 = new THREE.Mesh(cube_1_cube, new THREE.MeshFaceMaterial());
 	    scene.addObject(cube_1);
+		cube_1.events = new ms.event.EventHolder();
                 cube_1.position.y = 150;
 	    var plane_1_plane = 
 new THREE.Plane(
 200,200);
 	    var plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
 	    scene.addObject(plane_1);
+		plane_1.events = new ms.event.EventHolder();
                 set_rotation_x(plane_1.rotation, -90);
 	var __playing_sound1 = new THREE.Sound(streamer.get_resource('sounds/376737_Skullbeatz___Bad_Cat_Maste.ogg').asset
 	,700,20,true
@@ -158,43 +163,60 @@ new THREE.Plane(
                 application.window_half_x = window.innerWidth / 2;
                 application.window_half_y = window.innerHeight / 2;
                 application.is_mouse_down = false;
-	document.addEventListener( 'mousedown', mousedown_application, false );
-	function mousedown_application (event)
-	{
-	var x = event.clientX;
-	var y = event.clientY;
-		application.is_mouse_down = true;
-application.mouse_x_on_mouse_down = x - application.window_half_x;
+	application.events.addListener("mousedown", function(x,y)
+	{    
+		application.mouse_x_on_mouse_down = x - application.window_half_x;
 application.x_target_rotation_on_mouse_down = application.x_target_rotation;
 application.mouse_y_on_mouse_down = y - application.window_half_y;
 application.y_target_rotation_on_mouse_down = application.y_target_rotation;
-	};
-	document.addEventListener( 'mouseup', mouseup_application, false );
-	function mouseup_application (event)
-	{
-	var x = event.clientX;
-	var y = event.clientY;
-		application.is_mouse_down = false;
-	};
-	document.addEventListener( 'mousemove', mousemove_application, false );
-	function mousemove_application (event)
-	{
-	var x = event.clientX;
-	var y = event.clientY;
-		if (application.is_mouse_down)
-{
-application.mouse_x = x - application.window_half_x;
+	}
+	);
+	application.events.addListener("drag", function(x,y)
+	{    
+		application.mouse_x = x - application.window_half_x;
 application.x_target_rotation = application.x_target_rotation_on_mouse_down + (application.mouse_x - application.mouse_x_on_mouse_down) * 0.300000012;
 application.mouse_y = y - application.window_half_y;
 application.y_target_rotation = application.y_target_rotation_on_mouse_down + (application.mouse_y - application.mouse_y_on_mouse_down) * 0.300000012;
-}
-	};
+	}
+	);
+	application.events.addListener("animate", function()
+	{    
+		set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + (application.x_target_rotation - get_rotation_y(cube_1.rotation)) * 0.200000003);
+set_rotation_z(plane_1.rotation, get_rotation_y(cube_1.rotation));
+set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + (application.y_target_rotation - get_rotation_x(cube_1.rotation)) * 0.200000003);
+	}
+	);
 if(ui)
 {
 	ui.load_resources(function(){		
 		g_ui.fill_background = false;
 	});
 }
+var event_manager = new ms.event.ThreeEventManager();
+document.onmousemove = function(ev)
+{
+	event_manager.mousemove(ev.clientX, ev.clientY);                  
+};
+document.onmousedown = function(ev)
+{
+	event_manager.mousedown(ev.clientX, ev.clientY);                  
+};
+document.onmouseup = function(ev)
+{
+	event_manager.mouseup(ev.clientX, ev.clientY);		
+};
+document.onkeydown = function(ev)
+{
+	event_manager.keydown(ev.keyCode);                  
+};
+document.onkeyup = function(ev)
+{
+	event_manager.keyup(ev.keyCode);                  
+};
+document.onkeypress = function(ev)
+{
+	event_manager.keypress(ev.keyCode);                  
+};
 if (application.init)
 {
 	application.init();
