--- a/xss/production/test/3js_sound.html
+++ b/xss/production/test/3js_sound.html
@@ -21,6 +21,9 @@
 <script type="text/javascript" src="../js/ms-ui.js"></script>
 <script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript" src="../js/ms-state.js"></script>
+<script type="text/javascript" src="../js/ms-event.js"></script>
+<script type="text/javascript" src="../js/keys.js"></script>
+<script type="text/javascript" src="../js/colors.js"></script>
 <script type="text/javascript">		
 	if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 	var renderer = new THREE.WebGLRenderer( { antialias: false } );
@@ -30,6 +33,7 @@ var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
 var application = {};
+application.events = new ms.event.EventHolder();
 		var streamer = new ms.streamer.Streamer();
 	// --------RESOURCES---------
         var def_package_items = [];
@@ -58,7 +62,9 @@ if (g_elapsed < 0)
 else
 g_delta  = now - g_elapsed;  
 g_elapsed = now; 
+application.events.dispatch("animate", []);	
 		set_active_camera(camera_1);
+application.events.dispatch("switch_cameras", []);
 }
 var material_sphere1 = new THREE.MeshLambertMaterial({
 color:16755200,shading:THREE.FlatShading
@@ -93,9 +99,9 @@ new THREE.Sphere(
 20,32,16);
 	    var sphere_1 = new THREE.Mesh(sphere_1_sphere, material_sphere1);
 	    scene.addObject(sphere_1);
+		sphere_1.events = new ms.event.EventHolder();
 				container_1.addChild(sphere_1);
 				scene.addObject(container_1);
-                sphere_1.materials[ 0 ] = material_sphere1;
 	var sound_1 = new THREE.Sound(streamer.get_resource('res_sound_1').asset
 	,275,20,true
 	);
@@ -113,9 +119,9 @@ new THREE.Sphere(
 20,32,16);
 	    var sphere_2 = new THREE.Mesh(sphere_2_sphere, material_sphere2);
 	    scene.addObject(sphere_2);
+		sphere_2.events = new ms.event.EventHolder();
 				container_2.addChild(sphere_2);
 				scene.addObject(container_2);
-                sphere_2.materials[ 0 ] = material_sphere2;
 	var sound_2 = new THREE.Sound(streamer.get_resource('res_sound_2').asset
 	,275,20,true
 	);
@@ -128,7 +134,7 @@ new THREE.Plane(
 1000,1000,100,100);
 	    var plane_1 = new THREE.Mesh(plane_1_plane, material_wireframe);
 	    scene.addObject(plane_1);
-                plane_1.materials[ 0 ] = material_wireframe;
+		plane_1.events = new ms.event.EventHolder();
                 plane_1.position.y = 0.100000001;
                 set_rotation_x(plane_1.rotation, -90);
 if(ui)
@@ -137,6 +143,31 @@ if(ui)
 		g_ui.fill_background = false;
 	});
 }
+var event_manager = new ms.event.ThreeEventManager();
+document.onmousemove = function(ev)
+{
+	event_manager.mousemove(ev.clientX, ev.clientY);                  
+};
+document.onmousedown = function(ev)
+{
+	event_manager.mousedown(ev.clientX, ev.clientY);                  
+};
+document.onmouseup = function(ev)
+{
+	event_manager.mouseup(ev.clientX, ev.clientY);		
+};
+document.onkeydown = function(ev)
+{
+	event_manager.keydown(ev.keyCode);                  
+};
+document.onkeyup = function(ev)
+{
+	event_manager.keyup(ev.keyCode);                  
+};
+document.onkeypress = function(ev)
+{
+	event_manager.keypress(ev.keyCode);                  
+};
 if (application.init)
 {
 	application.init();
