--- a/xss/production/test/ui_demo.html
+++ b/xss/production/test/ui_demo.html
@@ -9,6 +9,9 @@
 <script type="text/javascript" src="../js/ms-ui.js"></script>
 <script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript" src="../js/ms-state.js"></script>
+<script type="text/javascript" src="../js/ms-event.js"></script>
+<script type="text/javascript" src="../js/keys.js"></script>
+<script type="text/javascript" src="../js/colors.js"></script>
 <script type="text/javascript">	
 var drawingCanvas;		
 var g_ui;
@@ -17,6 +20,7 @@ var g_delta = 0.0;
 var g_canvas;
 var g_ui_root;
 var application = {};
+application.events = new ms.event.EventHolder();
 var Sound = new ms.ui.Sound();
 		if(drawingCanvas){
 			var client =
@@ -110,7 +114,7 @@ function start(resolution)
 	window.setTimeout(updater, resolution);  
 }  
                 application.clicks = 0;
-	application.keydown = function(keycode)
+	application.events.addListener("keydown", function(keycode)
 	{    
 		if (btn1.isVisible())
 {
@@ -131,7 +135,8 @@ if (keycode == DOWN_ARROW)
 btn1.set_y(btn1.y + 2);
 }
 }
-	};
+	}
+	);
 window.onload = function() 
 {
 	drawingCanvas = document.getElementById("myCanvas");
@@ -178,12 +183,17 @@ window.onload = function()
 		    btn1 = new ms.ui.Button( 
 	    "images/smile_sad_48.png","images/smile_grin_48.png",test1.manager, test1);
                 btn1.set_rotation(15);
-	btn1.click = function()
+	btn1.events.addListener("click", function()
 	{    
 		lbl1.text("Got " + application.clicks + " smileys");
-btn1.set_rotation(btn1.get_rotation() + 10);
 application.clicks = application.clicks + 1;
-	};
+	}
+	);
+	btn1.events.addListener("mousedown", function()
+	{    
+		btn1.set_rotation(btn1.get_rotation() + 50);
+	}
+	);
  btn1.center(50, 50); 
 		    test2 = new ms.ui.Component( 
 	    main.manager, main);test2.mouse_thru = true;
@@ -192,17 +202,19 @@ application.clicks = application.clicks + 1;
  pb1.center(150, 10); 
 		    btn2 = new ms.ui.Image( 
 	    "images/arrow_left.png",test2.manager, test2);
-	btn2.click = function()
+	btn2.events.addListener("click", function()
 	{    
 		pb1.value(pb1.get_value() - 1);
-	};
+	}
+	);
                 btn2.rect(200, 115, 20, 20);
 		    btn3 = new ms.ui.Image( 
 	    "images/arrow_right.png",test2.manager, test2);
-	btn3.click = function()
+	btn3.events.addListener("click", function()
 	{    
 		pb1.value(pb1.get_value() + 1);
-	};
+	}
+	);
                 btn3.rect(380, 115, 20, 20);
 		    lbl2 = new ms.ui.Label( 
 	    "Verdana",test2.manager, test2);
@@ -211,7 +223,7 @@ application.clicks = application.clicks + 1;
                 lbl2.position(210, 200);
 		    btnNext = new ms.ui.Button( 
 	    "images/arrow_right_green_48.png","images/arrow_right_48.png",g_ui_root.manager, g_ui_root);
-	btnNext.click = function()
+	btnNext.events.addListener("click", function()
 	{    
 		if (main.get_active() < main.count() - 1)
 {
@@ -219,18 +231,20 @@ main.active(main.get_active() + 1);
 }
 btnNext.set_x(btnNext.x + 1);
 btnNext.set_rotation(btnNext.get_rotation() + 10);
-	};
+	}
+	);
                 btnNext.rect(320, 300, 100, 50);
 		    btnPrev = new ms.ui.Button( 
 	    "images/arrow_left_green_48.png","images/arrow_left_48.png",g_ui_root.manager, g_ui_root);
                 btnPrev.set_rotation(45);
-	btnPrev.click = function()
+	btnPrev.events.addListener("click", function()
 	{    
 		if (main.get_active() > 0)
 {
 main.active(main.get_active() - 1);
 }
-	};
+	}
+	);
                 btnPrev.rect(220, 300, 50, 50);
 		    stateBtn = new ms.ui.StateButton( 
 	    "images/smile_grin_48.png","images/smile_sad_48.png",g_ui_root.manager, g_ui_root);
@@ -267,8 +281,5 @@ main.active(main.get_active() - 1);
 	<canvas id="myCanvas" width="600" height="600">
 		<p>Your browser doesn't support canvas.</p>
 	</canvas>
-	<audio id="sounds" preload> 
-	Your browser does not support the audio element.
-	</audio>
 </body>
 </html>
