--- a/xss/production/test/ui_figures.html
+++ b/xss/production/test/ui_figures.html
@@ -9,6 +9,9 @@
 <script type="text/javascript" src="../js/ms-ui.js"></script>
 <script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript" src="../js/ms-state.js"></script>
+<script type="text/javascript" src="../js/ms-event.js"></script>
+<script type="text/javascript" src="../js/keys.js"></script>
+<script type="text/javascript" src="../js/colors.js"></script>
 <script type="text/javascript">	
 var drawingCanvas;		
 var g_ui;
@@ -17,6 +20,7 @@ var g_delta = 0.0;
 var g_canvas;
 var g_ui_root;
 var application = {};
+application.events = new ms.event.EventHolder();
 var Sound = new ms.ui.Sound();
 		if(drawingCanvas){
 			var client =
@@ -98,20 +102,22 @@ window.onload = function()
 		    c1 = new ms.ui.Circle( 
 	    "cyan","black",3,div1.manager, div1);
                 c1.setRadius(60);
-	c1.click = function()
+	c1.events.addListener("click", function()
 	{    
 		c1.setRadius(c1.getRadius() + 1);
-	};
+	}
+	);
                 c1.position(50, 50);
 		    r1 = new ms.ui.Rectangle( 
 	    "green",null,null,div1.manager, div1);
                 r1.set_rotation(-30);
                 r1.alpha(60);
-	r1.click = function()
+	r1.events.addListener("click", function()
 	{    
 		r1.set_x(r1.x + 5);
 r1.set_y(r1.y + 5);
-	};
+	}
+	);
                 r1.rect(200, 50, 60, 90);
 		    p1 = new ms.ui.Polygon( 
 	    "pink","brown",3,div1.manager, div1);
@@ -123,7 +129,7 @@ r1.set_y(r1.y + 5);
 		    btn = new ms.ui.Button( 
 	    "images/smile_grin_48.png","images/smile_sad_48.png",g_ui_root.manager, g_ui_root);
                 btn.set_rotation(45);
-	btn.click = function()
+	btn.events.addListener("click", function()
 	{    
 		for(var i = 0; i < 4; i++)
 {
@@ -139,7 +145,8 @@ application.y = p1.points[i].y - 5;
 }
 p1.setPointbyIndex(i, application.x, application.y);
 }
-	};
+	}
+	);
                 btn.rect(270, 200, 50, 50);
 			document.onkeydown = function(ev)
 			{
@@ -168,8 +175,5 @@ p1.setPointbyIndex(i, application.x, application.y);
 	<canvas id="myCanvas" width="600" height="600">
 		<p>Your browser doesn't support canvas.</p>
 	</canvas>
-	<audio id="sounds" preload> 
-	Your browser does not support the audio element.
-	</audio>
 </body>
 </html>
